[package]
name = "not_snake"
version = "0.1.0"
publish = false
authors = ["mramirez <ramirezmike2@gmail.com>"]
edition = "2021"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/bevy_gilrs",
    "bevy/bevy_winit",
    "bevy/png",
    "game_plugin/default",
]

native = [
    "game_plugin/native"
]

dev = [
    "bevy/dynamic",
    "bevy/bevy_dynamic_plugin",
    "native",
]

[dependencies]
bevy = { version = "0.6", default-features = false }
game_plugin = {path = "game_plugin"}
winit = { version = "0.25.0" }

[build-dependencies]
embed-resource = "1.4"

[patch.crates-io]
# override it with bevy from git
bevy = { git = "https://github.com/bevyengine/bevy" }

[patch."https://github.com/bevyengine/bevy"]
bevy = { path = "../../../repos/bevy" }
