[package]
name = "not_snake"
version = "0.1.0"
edition = "2021"
authors = ["mramirez <ramirezmike2@gmail.com>"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.6.1"
#bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast" }
#bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking" }
petgraph = "0.5.1"
#bevy_prototype_debug_lines = "0.2.2"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
anyhow = "1.0"
ron = "0.6.2"
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", features = ["wav", "ogg"]}
