[package]
name = "not_snake"
version = "0.1.0"
edition = "2021"
authors = ["mramirez <ramirezmike2@gmail.com>"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.7.0"
petgraph = "0.5.1"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
anyhow = "1.0"
ron = "0.6.2"
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", branch = "main", features = ["wav", "ogg"]}
bevy_utils = {version = "0.7", default-features = false}
leafwing-input-manager = "0.3.0"

