[package]
name = "game_plugin"
publish = false
version = "0.1.0"
authors = ["mramirez <ramirezmike2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gilrs",
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/hdr",
    "bevy/x11",
    "bevy_kira_audio/ogg",
    "bevy/dynamic"
]

native = [
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "081350916c39fc1c7c9d659ccb6d86413832b465", default-features = false }
#bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast" }
#bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking" }
petgraph = "0.5.1"
#bevy_prototype_debug_lines = "0.2.2"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
anyhow = "1.0"
ron = "0.6.2"
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", rev = "9a9a4c87e01ad2fb446852317e63f8fc103406c1", features = ["wav"]}



[patch.crates-io]
# override it with bevy from git
bevy = { path = "../../../../repos/bevy" }

[patch."https://github.com/bevyengine/bevy"]
bevy = { path = "../../../../repos/bevy" }
